--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ button:hover {
     <h2>Hitung Stop Loss dan Take Profit</h2>
     <input type="number" id="inputNilai" placeholder="Masukkan nilai"><br>
     <input type="number" id="inputStopLoss" placeholder="Masukkan Stop Loss (%)"><br>
-    <input type="number" id="inputTakeProfit" placeholder="Masukkan Take Profit (x)"><br>
+    <input type="number" id="inputTakeProfit" placeholder="Masukkan Take Profit (%)"><br>
     <button onclick="hitung()">Hitung</button>
     <p id="output"></p>
 </div>
